# fastAPI_tut

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: api.py  app.py  config.py  crud.py  database.py  db.py  images.py  main.py  models.py  schemas.py  users.py
