[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "FastAPI tutorial project with posts, uploads, and feed endpoints"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.21.0",
    "fastapi==0.118.0",
    "fastapi-users[sqlalchemy]==14.0.1",
    "imagekitio==4.2.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.37.0",
]
